# warspite-financial-lib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build.yml
docker/: Dockerfile  run
tests/: __init__.py
tests/integration/: __init__.py  test_cli_integration.py  test_end_to_end_workflows.py  test_forecasting_integration.py  test_provider_integration.py
tests/property/: __init__.py  test_dataset_properties.py  test_emulator_properties.py  test_provider_properties.py  test_strategy_properties.py  test_visualization_properties.py
tests/unit/: __init__.py  test_base_interfaces.py  test_brownian_motion_provider.py  test_cli.py  test_cli_main.py  test_dataset_from_provider.py  test_dataset_operations.py  test_dataset_serializer.py  test_emulator.py  test_forecasting.py  test_init_exports.py  test_oanda_provider.py  test_package_structure.py  test_strategies.py  test_visualization.py  test_visualization_multi_symbol.py  test_yfinance_provider.py
warspite_financial/: __init__.py
warspite_financial/cli/: __init__.py  cli.py  main.py
warspite_financial/datasets/: __init__.py  dataset.py  helpers.py  serializer.py
warspite_financial/emulator/: __init__.py  emulator.py  helpers.py
warspite_financial/examples/: __init__.py  workflows.py
warspite_financial/forecasting/: __init__.py  heuristic.py
warspite_financial/providers/: __init__.py  base.py  brownian_motion.py  oanda.py  yfinance.py
warspite_financial/strategies/: __init__.py  base.py  bollinger_bands.py  buy_and_hold.py  contrarian.py  perfect.py  random.py  short.py  sma.py
warspite_financial/utils/: __init__.py  exceptions.py
warspite_financial/visualization/: __init__.py  helpers.py
warspite_financial/visualization/renderers/: __init__.py  ascii_renderer.py  base.py  csv_renderer.py  matplotlib_renderer.py  pdf_renderer.py
